# k21

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml
.github/workflows/: rust.yml
k21-screen/src/: lib.rs
libs/k21/: Cargo.toml
libs/k21/src/: lib.rs
libs/k21/src/capture/: mod.rs  screen_record.rs  types.rs  utils.rs
libs/k21/src/common/: mod.rs  path_utils.rs  types.rs  utils.rs
libs/k21/src/image2text/: mod.rs
libs/k21/src/image2text/ocr/: mod.rs  ocr_mac.rs  ocr_tesseract.rs  ocr_win.rs  types.rs
libs/k21/src/image2text/vision/: mod.rs  types.rs  utils.rs  vision_api_call.rs
libs/k21/src/image_sc/: utils.rs
libs/k21/src/image_utils/: mod.rs  utils.rs
libs/k21/src/logger/: mod.rs
libs/k21/src/mp4_pr/: mod.rs  utils.rs
libs/k21/src/process/: mod.rs  types.rs  utils.rs
libs/k21/src/processor/: utils.rs
libs/k21/src/screen_capture/: mod.rs  screen_record.rs  utils.rs
libs/k21/src/upload/: mod.rs  types.rs
libs/k21/src/upload/image/: mod.rs  utils.rs
libs/k21/src/upload/video/: mod.rs  utils.rs
libs/k21/tests/: it-tests.rs
libs/mylib/: Cargo.toml
libs/mylib/src/: lib.rs
libs/mylib/src/mp4_pr/: mod.rs  utils.rs
libs/mylib/src/ocr/: mod.rs  ocr_linux.rs  ocr_mac.rs
src/: common.rs  lib.rs  main.rs  ocr.rs  ocr_mac.rs  screen_record.rs
src/common/: mod.rs  utils.rs
src/common/image_sc/: utils.rs
src/common/mp4/: utils.rs
src/common/ocr/: mod.rs  ocr_linux.rs  ocr_win.rs
src/processor/: database.rs  image_utils.rs  main.rs  mod.rs  mp4.rs  ocr.rs
src/screen/: main.rs  screen_record.rs
src/server/: main.rs  service.rs
tests/: it-tests.rs
