[package]
name = "k21-screen"
version = "0.1.0"
edition = "2021"
default-run = "k21-server"

[[bin]]
name = "k21-screen"
path = "src/screen/main.rs"

[[bin]]
name = "k21-processor"
path = "src/processor/main.rs"

[[bin]]
name = "k21-server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.95"
image = "0.25.5"
xcap = "0.3.2"
tokio = { version = "1.15", features = ["full", "tracing"] }
clap = { version = "4.5.30", features = ["derive"] }
log = "0.4.25"
env_logger = "0.11.6"
humantime = "2.1.0"
glob = "0.3.2"
imageproc = "0.25.0"
minimp4 = "0.1.2"
openh264 = "0.7.2"
ctrlc = "3.4.5"
mp4 = "0.14.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
chrono = "0.4"
dirs = "5.0.1"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "=0.2.164"
cidre = { git = "https://github.com/yury/cidre.git", version = "0.5.0" }
