[package]
name = "k21"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.5"
mp4 = "0.14.0"
anyhow = "1.0.95"
openh264 = "0.7.2"
base64 = "0.21"
log = "0.4.25"
env_logger = "0.11.6"
chrono = "0.4"
humantime = "2.1.0"
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
xcap = "0.3.2"
minimp4 = "0.1.2"
tokio = { version = "1.15", features = ["full", "tracing"] }
ctrlc = "3.4.5"
glob = "0.3.2"
rusty-tesseract = { git = "https://github.com/louis030195/rusty-tesseract.git", branch = "main" }
tempfile = "3.8.0"
axum = "0.7.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "=0.2.164"
cidre = { git = "https://github.com/yury/cidre", rev = "efb9e060c6f8edc48551365c2e80d3e8c6887433", features = ["ns", "cv", "vn"] }
# cidre = { git = "https://github.com/yury/cidre" }